--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,4 +2,4 @@ compatibility_date = "2022-09-20"
 main = "src/index.ts"
 name = "nost-vip"
 node_compat = true
-usage_model = "unbound"
+usage_model = "bundled"
