--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "nost-vip",
   "version": "0.0.0",
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230115.0",
-    "typescript": "^4.9.5",
-    "wrangler": "^2.9.0"
-  },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
   },
   "dependencies": {
-    "ethers": "^5.7.2",
-    "nostr-tools": "^1.2.1",
-    "svg2png-wasm": "^1.3.4"
+    "nostr-tools": "^1.2.1"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230115.0",
+    "typescript": "^4.9.5",
+    "wrangler": "^2.9.0"
   }
 }
